[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

actix-web = "4"
actix = "0.13.1"

rand = "0.8"
secp256k1 = { version = "0.28.0", features = ["rand"] }

sha2 = "0.10.8"
hex = "0.4.3"
chrono = "0.4.31"

rocksdb = "0.21.0"

tonic = "0.5.1"

[build-dependencies]
tonic-build = "0.5.1"